[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/p1_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/fishTile_125.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 35.3457
height = 20.514

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 216, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 72, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 96 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "swim",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), null ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "death"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -174, -0.25, 0, 0.25, 0, 265, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1 )
}

[sub_resource type="Animation" id=13]
resource_name = "bubblesLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -46.3577, 3.03065 ), Vector2( -54.7762, -40.7454 ), Vector2( -62.0722, -69.3681 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "bubblesRight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 49.3883, 9.54094 ), Vector2( 62.8578, -13.4695 ), Vector2( 71.8375, -49.0142 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 0.2, 0.2 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )

[node name="DamageBox" type="CollisionShape2D" parent="."]
position = Vector2( 1.5874, 8.33386 )
shape = SubResource( 1 )

[node name="Animations" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Animations"]
position = Vector2( 0, 8.731 )
scale = Vector2( 1.00736, 1 )
frames = SubResource( 10 )
animation = "idle"
playing = true

[node name="RecoveryTimer" type="Timer" parent="Animations"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
anims/death = SubResource( 11 )

[node name="ImmunityTimer" type="Timer" parent="Animations"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -62.0722, -69.3681 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
method_call_mode = 1
anims/bubblesLeft = SubResource( 13 )
anims/bubblesRight = SubResource( 12 )

[connection signal="animation_finished" from="Animations/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
